Create non active navigation bar in Website for levels

--- a/Website/index.html
+++ b/Website/index.html
@@ -12,6 +12,10 @@
 
 
 
+
+
+
+
 <style>
 * {
 margin: 0;
@@ -19,6 +23,9 @@ padding: 0;
 box-sizing: border-box;
 font-family: 'Poppins';
 }
+
+
+
 
 
 </style>
@@ -31,6 +38,17 @@ font-family: 'Poppins';
 <div class="circle"></div>
 <header>
 <a><img src="logo.png" class="logo" width="150px"></a>
+
+
+
+<ul class="navbar">
+<li><a href="#" id="homepage">Levels: </a></li>
+<li><a href="#">Easy Level</a></li>
+<li><a href="#">Medium</a></li>
+<li><a href="#">Hard Level</a></li>
+</ul>
+</header>
+
 
 
 
