--- a/Website/index.html
+++ b/Website/index.html
@@ -49,7 +49,13 @@ font-family: 'Poppins';
 </ul>
 </header>
 
-
+<div style="width: 100%;">
+    <div style="width: 30%; float: left;" class="text">
+    <span id="the"> The</span>
+    <br> <span id="maze"> MAZE</span>
+    <br> <span id="game"> game !</span>
+    <br> <span id="download"> DOWNLOAD</span></h2>
+    </div>
 
 
 
