Add style to Download Section

--- a/Website/index.html
+++ b/Website/index.html
@@ -24,7 +24,29 @@ box-sizing: border-box;
 font-family: 'Poppins';
 }
 
+.navbar {
+position: relative;
+display: flex;
+}
 
+.logo {
+position: relative;
+max-width: 150px;
+}
+
+li {
+list-style: none;
+}
+
+a {
+display: inline-block;
+color: teal;
+font-weight: 500px;
+margin-left: 30px;
+text-decoration: none;
+padding: 8px 15px;
+cursor: default;
+}
 
 
 
@@ -34,6 +56,8 @@ font-family: 'Poppins';
 
 
 <body>
+
+
 <section>
 <div class="circle"></div>
 <header>
