--- a/Website/index.html
+++ b/Website/index.html
@@ -12,16 +12,45 @@
 
 
 
-
-
-
-
 <style>
 * {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family: 'Poppins';
+}
+
+section {
+position: relative;
+width: 100%;
+min-height: 100vh;
+padding: 100px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+background: linear-gradient(to bottom, teal, rgb(183, 206, 206));
+}
+
+.circle {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: #d3d3d3e7;
+clip-path: circle(60% at right -35%);
+z-index: 0;
+}
+
+header {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+padding: 40px 100px;
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
 
 .navbar {
@@ -48,16 +77,88 @@ padding: 8px 15px;
 cursor: default;
 }
 
+#homepage {
+background-color: teal;
+color: rgb(226, 226, 226);
+border-radius: 50px;
+padding: 8px 15px;
+}
 
+#homepage:hover {
+margin-top: -5%;
+}
 
+a:hover {
+background-color: teal;
+color: rgb(223, 223, 223);
+border-radius: 50px;
+padding: 8px 15px;
+}
+
+.techno {
+position: absolute;
+width: 39%;
+margin-top: -160px;
+margin-left: 10%;
+z-index: 1;
+}
+
+.text {
+font-family: 'Comfortaa';
+margin-left: 100px;
+}
+
+#the {
+position: absolute;
+margin-top: -45px;
+margin-left: 7px;
+font-family: 'Comfortaa';
+font-size: 30px;
+font-weight: lighter;
+}
+
+#maze {
+font-family: 'Comfortaa';
+position: absolute;
+margin-top: -20px;
+font-size: 90px;
+color: rgb(28, 94, 194);
+text-shadow: 2px 2px 8px #292929;
+-webkit-text-stroke: 2px rgb(15, 78, 216);
+-webkit-text-fill-color: rgb(68, 148, 223);
+}
+
+#game {
+font-family: 'Comfortaa';
+font-size: 48px;
+margin-top: 55px;
+margin-left: 140px;
+position: absolute;
+}
+
+footer {
+text-align: center;
+padding: 12px;
+background-color: rgba(0, 78, 78, 0.678);
+color: white;
+}
+
+#download {
+background-color: #0a0a0a;
+color: white;
+position: absolute;
+margin-top: 140px;
+margin-left: 60px;
+padding: 10px 30px;
+border-radius: 10px;
+cursor: pointer;
+}
 </style>
 </head>
 
 
 
 <body>
-
-
 <section>
 <div class="circle"></div>
 <header>
@@ -73,13 +174,25 @@ cursor: default;
 </ul>
 </header>
 
+
+
 <div style="width: 100%;">
-    <div style="width: 30%; float: left;" class="text">
-    <span id="the"> The</span>
-    <br> <span id="maze"> MAZE</span>
-    <br> <span id="game"> game !</span>
-    <br> <span id="download"> DOWNLOAD</span></h2>
-    </div>
+<div style="width: 30%; float: left;" class="text">
+<span id="the"> The</span>
+<br> <span id="maze"> MAZE</span>
+<br> <span id="game"> game !</span>
+<br> <span id="download"> DOWNLOAD</span></h2>
+</div>
+
+
+
+<img src="wallpaper.png" class="techno" style="float: left;">
+</div>
+</section>
+
+
+
+<footer>&copy; Copyright 2021 TheRunners.html</footer>
 
 
 
