--- a/Website/index.html
+++ b/Website/index.html
@@ -6,18 +6,15 @@
     <title> MazeGame</title>
     <link link rel="shortcut icon" href="/IMG/icon.png">
     <link rel="stylesheet" href="/CSS/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 
 </head>
-
-
 
 <body>
     <section>
         <div class="circle"></div>
         <header>
-            <a><img src="" class="logo" width="150px"></a>
-
-
+            <a><img src="/IMG/logo.png" class="logo" width="150px"></a>
 
             <ul class="navbar">
                 <li><a href="#" id="homepage">Levels: </a></li>
@@ -35,9 +32,11 @@
                 <br> <span id="download"> DOWNLOAD</span></h2>
             </div>
 
-            <img src="" class="techno" style="float: left;">
+            <img src="/IMG/monitor.png" class="techno" style="float: left;">
         </div>
     </section>
+
+
 
     <footer>&copy; Copyright 2021 TheRunners.html</footer>
 
