Add a function for downloading the .rar file which contains the maze-project

--- a/Website/index.html
+++ b/Website/index.html
@@ -5,7 +5,7 @@
 
     <title> MazeGame</title>
     <link link rel="shortcut icon" href="/IMG/icon.png">
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 
 </head>
@@ -14,7 +14,7 @@
     <section>
         <div class="circle"></div>
         <header>
-            <a><img src="/IMG/logo.png" class="logo" width="150px"></a>
+            <a><img src="IMG/logo.png" class="logo" width="150px"></a>
 
             <ul class="navbar">
                 <li><a href="#" id="homepage">Levels: </a></li>
@@ -29,10 +29,10 @@
                 <span id="the"> The</span>
                 <br> <span id="maze"> MAZE</span>
                 <br> <span id="game"> game !</span>
-                <br> <span id="download"> DOWNLOAD</span></h2>
+                <br> <button type="submit" onclick="window.open('Maze-Project.rar')"><span id="download"> DOWNLOAD</span></button>
             </div>
 
-            <img src="/IMG/monitor.png" class="techno" style="float: left;">
+            <img src="IMG/monitor.png" class="techno" style="float: left;">
         </div>
     </section>
 
@@ -40,10 +40,8 @@
 
     <footer>&copy; Copyright 2021 TheRunners.html</footer>
 
-
+    <script src="JavaScript/index.js"></script>
 
 </body>
-
-
 
 </html>
