Add screen image

--- a/Website/index.html
+++ b/Website/index.html
@@ -17,10 +17,10 @@
             <a><img src="IMG/logo.png" class="logo" width="150px"></a>
 
             <ul class="navbar">
-                <li><a href="#" id="homepage">Levels: </a></li>
-                <li><a href="#">Easy Level</a></li>
-                <li><a href="#">Medium</a></li>
-                <li><a href="#">Hard Level</a></li>
+                <li><a href="" id="homepage">Levels: </a></li>
+                <li><a href="">Easy Level</a></li>
+                <li><a href="">Medium</a></li>
+                <li><a href="">Hard Level</a></li>
             </ul>
         </header>
 
@@ -32,7 +32,8 @@
                 <br> <button type="submit" onclick="window.open('Maze-Project.rar')"><span id="download"> DOWNLOAD</span></button>
             </div>
 
-            <img src="IMG/monitor.png" class="techno" style="float: left;">
+            <img src="IMG/monitor.png" class="monitor" style="float: left;">
+            <img src="IMG/maze.gif" class="monitor screen" style="float: left;">
         </div>
     </section>
 
