Create new .zip folder with the new .exe file

--- a/Website/index.html
+++ b/Website/index.html
@@ -29,7 +29,7 @@
                 <span id="the"> The</span>
                 <br> <span id="maze"> MAZE</span>
                 <br> <span id="game"> game !</span>
-                <br> <button type="submit" onclick="window.open('Maze-Project.rar')"><span id="download"> DOWNLOAD</span></button>
+                <br> <button type="submit" onclick="window.open('Maze-Project.zip')"><span id="download"> DOWNLOAD</span></button>
             </div>
 
             <img src="IMG/monitor.png" class="monitor" style="float: left;">
